--- a/semana10/labex/package.json
+++ b/semana10/labex/package.json
@@ -10,9 +10,11 @@
     "react": "^17.0.2",
     "react-country-region-selector": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
