--- a/semana18/LabECommerce/package.json
+++ b/semana18/LabECommerce/package.json
@@ -20,11 +20,7 @@
   },
   "homepage": "https://github.com/future4code/lovelace-labenu-system11#readme",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/knex": "^0.16.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3"
+    
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -32,6 +28,11 @@
     "express": "^4.17.1",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/knex": "^0.16.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.3"
   }
 }
